--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "tiktok-ui",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://ciara00.github.io/tiktok-ui/",
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-brands-svg-icons": "^6.0.0",
@@ -14,6 +15,7 @@
         "@tippyjs/react": "^4.2.6",
         "axios": "^0.27.2",
         "classnames": "^2.3.1",
+        "gh-pages": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.3.0",
@@ -24,7 +26,9 @@
         "start": "react-app-rewired start",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
-        "eject": "react-app-rewired eject"
+        "eject": "react-app-rewired eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
