--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "tiktok-ui",
+    "name": "",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://ciara00.github.io/tiktok-ui/src",
+    "homepage": "https://ciara00.github.io/tiktok-ui/",
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-brands-svg-icons": "^6.0.0",
